@@ -3,10 +3,16 @@ package com.project.hackhub.observer;
 import com.project.hackhub.model.team.Invito;
 import com.project.hackhub.model.utente.UtenteRegistrato;
 import com.project.hackhub.service.UserStateService;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 
+@Component
+@AllArgsConstructor
 public class InvitoUtenteListener implements EventListener{
+
+    private final UserStateService userStateService;
 
     /**
      * Gets the {@link EventType} supported by this listener
@@ -36,7 +42,7 @@ public class InvitoUtenteListener implements EventListener{
         if(entity == null) throw new IllegalArgumentException("invitation cannot be null");
 
         Invito invitation = (Invito) entity;
-        UserStateService.addInvitation(usersList.getFirst(), invitation);
+        userStateService.addInvitation(usersList.get(0), invitation);
         //TODO, il messaggio è da restituire quando facciamo la chiamata API!
     }
 }
