@@ -3,14 +3,17 @@ package com.project.hackhub.observer;
 import com.project.hackhub.model.team.Team;
 import com.project.hackhub.model.utente.UtenteRegistrato;
 import com.project.hackhub.model.utente.state.UserStateType;
+import com.project.hackhub.service.UserStateService;
+import lombok.AllArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 
-import static com.project.hackhub.service.UserStateService.changeUserState;
-
-
+@Component
+@AllArgsConstructor
 public class NuovoLeaderListener implements EventListener{
 
+    private final UserStateService userStateService;
 
     /**
      * Gets the {@link EventType} supported by this listener
@@ -41,8 +44,8 @@ public class NuovoLeaderListener implements EventListener{
         if(entity == null) throw new IllegalArgumentException("team cannot be null");
 
         Team team = (Team) entity;
-        changeUserState(usersList.getFirst(), false, team.getHackathon(), UserStateType.DEFAULT_STATE);
-        changeUserState(usersList.get(1), false, team.getHackathon(), UserStateType.TEAM_LEADER);
+        userStateService.changeUserState(usersList.get(0), false, team.getHackathon(), UserStateType.DEFAULT_STATE);
+        userStateService.changeUserState(usersList.get(1), false, team.getHackathon(), UserStateType.TEAM_LEADER);
         //TODO, il messaggio è da restituire quando facciamo la chiamata API! Gli utenti da notificare sono tutti i membri del team
     }
 }
